html Code finnished

--- a/index.html
+++ b/index.html
@@ -4,11 +4,39 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>R.P.S. Game</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+  <section class="game">
+    <div class="title"> Rock Paper Scissors</div>
+        <div class="score">
+          <div id="PlayerScore">
+            <h2>You Have</h2>
+            <p id="P-count">0</p>
+          </div> 
+        <div id="ComScore">
+          <h2>Computer></h2>
+          <p id="C-count">0</p>
+        </div>
+      </div>
+
+    <div class="move">Pick Your Move</div>
+
+    <Div class="movesLeft">Moves left: 10</Div>
+    
+    <div class="options" id="Moves">
+      <button id="Rock">Rock</button>
+      <button id="Paper">Paper</button>
+      <button id="Scissors">Scissors</button>
+    </div>
+    <div class="result"></div>
+         
+        <button class="reload"></button>
+<p id="test">the best skiing is in JH</p>       
+
+  </section>
   
   <script src="script.js"></script>
 </body>
